Solved issue with overlapping popup

--- a/jsAPI.css
+++ b/jsAPI.css
@@ -14,7 +14,6 @@
 	justify-content: center;
 	bottom: 0;
 	right: 0;
-	padding: 20px;
 }
 
 .commandPopup {
@@ -29,7 +28,6 @@
 	justify-content: center;
 	bottom: 0;
 	right: 0;
-	padding: 20px;
 }
 
 .textFieldLabeled {
